03-03-2026 Session 1 _ Basics
Python 3.14.3 (tags/v3.14.3:323c59a, Feb  3 2026, 16:04:56) [MSC v.1944 64 bit (AMD64)] on win32
Enter "help" below or click "Help" above for more information.
2+3
5
9-7
2
10*6
60
4/2
2.0
5/2
2.5
9-8.2
0.8000000000000007
9.0-2
7.0
5//2
2
8+9-3
14
8+2*3
14
(8+2)*3
30
3^2
1
2*2*2
8
2**3
8
10/3
3.3333333333333335
10//3
3
10%3
1
3%2
1
'samira'
'samira'
print('samira')
samira
print("samira's laptop")
samira's laptop
print('samira "laptop"')
samira "laptop"
print('samira\'s "laptop"')
samira's "laptop"
'samira'+'samira'
'samirasamira'
10*'samira'
'samirasamirasamirasamirasamirasamirasamirasamirasamirasamira'
print(c:\docs\nope)
SyntaxError: invalid syntax
print(r'c:docs\nope')
c:docs\nope
